--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,15 @@ button {
   margin-top: 10px;
   width: 20%;
 }
+.savedJoke {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+  margin-top: 50px;
+  width: 70%;
+  border: 5px solid black;
+  padding: 10px;
+  box-shadow: 0 0 15px;
+}
