--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,8 @@ button {
   padding: 10px;
   box-shadow: 0 0 15px;
 }
+.savedJoke_container {
+  border: solid 2px black;
+  margin-bottom: 20px;
+  width: 60%;
+}
